--- a/import-service.yaml
+++ b/import-service.yaml
@@ -1,14 +1,16 @@
 server:
   port: 8081
 
-spring:
-  main:
-    banner-mode: off
-
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
 
 app:
   scheduling:
