--- a/import-service.yaml
+++ b/import-service.yaml
@@ -6,11 +6,11 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: refresh, info, health, logfile, loggers, metrics, scheduledtasks, threaddump, heapdump
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, info, health, metrics, scheduledtasks, threaddump, heapdump
 
 app:
   scheduling:
