--- a/discovery-service.yaml
+++ b/discovery-service.yaml
@@ -9,3 +9,9 @@ eureka:
     register-with-eureka: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+opentracing:
+  jaeger:
+    udp-sender:
+      host: localhost
+      port: 6831
